[tool.poetry]
name = "troncos"
version = "8.0.1"
description = "Collection of Python logging and tracing tools"
authors = [
  "Guðmundur Björn Birkisson <gudmundur.birkisson@oda.com>",
  "Karl Fredrik Haugland <karlfredrik.haugland@oda.com>",
  "Eirik Martiniussen Sylliaas <eirik.sylliaas@oda.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kolonialno/troncos"
repository = "https://github.com/kolonialno/troncos"
documentation = "https://github.com/kolonialno/troncos"
keywords = ["logs", "traces", "opentelemetry"]

[tool.poetry.dependencies]
ddtrace = "4.1.2"
opentelemetry-exporter-otlp-proto-grpc = { version = ">=1.19,<2", optional = true }
opentelemetry-exporter-otlp-proto-http = ">=1.19,<2"
opentelemetry-sdk = ">=1.19,<2"
python = ">=3.11,<3.15"
python-ipware = ">=2,<4"
structlog-sentry = { version = ">=2.0.0,<3", optional = true }

[tool.poetry.extras]
grpc = ["opentelemetry-exporter-otlp-proto-grpc"]
sentry = ["structlog-sentry"]

[tool.poetry.group.dev.dependencies]
celery = "^5.6.2"
django = "^5.2.3"
django-environ = "^0.12.0"
fastapi = ">=0.128.0,<1"
ipython = "^9.9.0"
mkdocs-techdocs-core = "^1.6.1"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest_codeblocks = "^0.17.0"
pytest-asyncio = "^1.3.0"
pytest-benchmark = "^5.2.3"
pytest-cov = "^7.0.0"
pytest-httpserver = "^1.0.8"
requests = "^2.31.0"
snakeviz = "^2.2.0"
structlog = "^25.5.0"
types-requests = "^2.32.4.20260107"
ruff = "^0.14.10"
pytest-env = "^1.2.0"
pydantic = "^2.12.5"
cffi = "^1.17.1"
grpcio = "^1.76.0"


[tool.mypy]
python_version = "3.11"
files = ["./troncos", "./tests"]
namespace_packages = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "normal"
strict = true

[[tool.mypy.overrides]]
module = ["opentelemetry.sdk.*", "opentelemetry.context.*"]
implicit_reexport = true

[tool.pytest.ini_options]
minversion = 6.0
python_files = "test_*.py"
python_functions = "test_*"
cache_dir = ".pytest_cache"
# Silence warning by opting in to use pytest 6's new default value
junit_family = "xunit2"
# Include captured log messages in system-out in Jenkins report file
junit_logging = "system-out"
console_output_style = "classic"
empty_parameter_set_mark = "xfail"
log_cli_level = "INFO"
log_level = "INFO"
ddtrace = 0
filterwarnings = [
  "error",
  "ignore:Type google._upb._message.MessageMapContainer:DeprecationWarning:",
  "ignore:Type google._upb._message.ScalarMapContainer:DeprecationWarning:",
  "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:",
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning:",
  "ignore:Deprecated call to `pkg_resources:DeprecationWarning:",
]
addopts = [
  "--ignore=perf"
]
env = [
    "DD_TRACE_ENABLED=True",
]


[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".github",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    # Regular flake8 rules
    "C", "E", "F", "W",
    # flake8-bugbear rules
    "B",
    # Import sorting rules
    # "I",
    # flake8-comprehensions
    "C4",
    # flake8 django
    "DJ",
    # Pylint rules
    "PLC", "PLE", "PLR", "PLW",
    # Ruff
    "RUF",
]
ignore = [
  # C901 is too complex
  "C901",

  # PLC0415 Import should be at the top-level of a file
  "PLC0415",
  # PLR2004 Magic value used in comparison
  "PLR2004",
  # PLR0913 Too many arguments in function definition
  "PLR0913",
]

[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"
